# AetherLMS

./: .env.example  ddos.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  celery.py  celery_config.py  config.py  database.py  main.py
app/background_tasks/: __init__.py  decorators.py  tasks.py
app/background_tasks/jobs/: __init__.py  analytics_jobs.py  assignment_jobs.py  course_jobs.py  media_jobs.py  notification_jobs.py  submission_jobs.py  system_jobs.py
app/models/: __init__.py  admin.py  analytics.py  assignment.py  association_tables.py  background_task.py  comment.py  course.py  discussion.py  enrollment.py  instructor.py  lesson.py  module.py  notification.py  payment.py  permission.py  student.py  submission.py  user.py
app/routers/: __init__.py  admin.py  analytics.py  assignment.py  auth.py  background_task.py  course.py  discussion.py  notification.py  payment.py  user.py
app/schemas/: __init__.py  admin.py  auth.py  course.py
app/utils/: __init__.py  dependencies.py  security.py  seed.py
app/utils/dependencies/: __init__.py  auth.py
app/utils/helpers/: __init__.py  auth.py  course.py
