[project]
name = "aetherlms"
version = "0.1.0"
description = "An Online Learning Management System to manage courses, students, and learning content."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "databases~=0.5",
    "fastapi[all]~=0.99",
    "numpy>=2.2.2",
    "passlib[bcrypt]~=1.7",
    "psycopg2-binary>=2.9.10",
    "pyjwt~=2.8",
    "pytest~=7.4",
    "python-dotenv~=1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy~=2.0",
    "uvicorn[standard]~=0.23",
]
